--- a/ClubSoft/Views/Provincias/Index.cshtml
+++ b/ClubSoft/Views/Provincias/Index.cshtml
@@ -2,22 +2,30 @@
     ViewData["Title"] = "Provincias";
 }
 
-<div class="text-center">
+@* <div class="text-center">
   <h1 class="display-4">Provincias</h1>
-</div>
-<div style="height: 100%;">
-  <div class="table-responsive" style="height: 450px; overflow-y: auto;">
-    <table class="table table-hover">
-      <thead>
-        <tr>
-          <th style="position: sticky; top: 0; background-color: white;">Nombre</th>
-        </tr>
-      </thead>
-      <tbody id="tbody-Provincias">
-      </tbody>
-    </table>
+</div> *@
+
+<div class="p-3" style="heigth: 100%;">
+  <div class="card">
+    <h3 class="card-header text-end"><i class="fa-solid fa-table pe-2"></i>PROVINCIAS</h3>
+    <div class="card-body">
+      <div class="table-responsive" style="height: 500px; overflow-y: auto;">
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th style="position: sticky; top: 0; background-color: white;">Nombre</th>
+            </tr>
+          </thead>
+          <tbody id="tbody-Provincias">
+          </tbody>
+        </table>
+      </div>
+    </div>
   </div>
 </div>
+
+
 
  
   @section Scripts{
