--- a/ClubSoft/Views/Personas/Index.cshtml
+++ b/ClubSoft/Views/Personas/Index.cshtml
@@ -9,31 +9,20 @@
 <div class="p-3">
   <div class="row">
     <h4></i>Agregar Nueva Persona<i class="fa-solid fa-plus ps-2"></i></h4>
-    @* <input type="hidden" id="LocalidadID" value="0" />
-    <div class="col-md-3">
-      <input type="text" class="form-control" id="LocalidadNombre" style="text-transform:uppercase"
-        placeholder="">
-    </div>
-    <div class="col-md-3">
-      <select class="form-control" id="ProvinciaID">
-        
-      </select>
-    </div>
-    <div class="col-md-3">
-      <button type="button" onclick="GuardarRegistro()" class="btn btn-primary">Guardar</button>
-    </div>
-  </div> *@
+   
      
 <!-- Button trigger modal -->
 <div class="mb-2">
-  <button type="button" onclick="ListadoEmpleados()" class="btn btn-primary">
+  <button type="button" onclick="ListadoPersonas()" class="btn btn-primary">
     Refrescar Tabla
   </button>
-  <button type="button" class="btn btn-primary" onclick="NuevoEmpleado()" data-bs-toggle="modal" data-bs-target="#ModalPersonas">
+  <button type="button" class="btn btn-primary" onclick="NuevaPersona()" data-bs-toggle="modal" data-bs-target="#ModalPersonas">
     Nueva Persona
   </button>
 </div>
-  <div class="modal fade" id="ModalPersonas" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+
+@* MODAL AGREGAR *@
+ <div class="modal fade" id="ModalPersonas" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -44,25 +33,39 @@
         <form>
           <div class="mb-3">
             <input type="hidden" id="PersonaID" value="0"/>
-
             <label for="Nombre" class="form-label">Nombre</label>
-            <input type="text" class="form-control" id="Nombre" style="text-transform: uppercase" placeholder="">
+            <input type="text" class="form-control" id="PersonaNombre" style="text-transform: uppercase" placeholder="">
           </div>
 
-         <label for="Apellido" class="form-label">Apellido</label>
-              <input type="text" id="Apellido" class="form-control"/>
+          <div class="mb-3">
+            <label for="Apellido" class="form-label">Apellido</label>
+            <input type="text" class="form-control" id="PersonaApellido" placeholder="">
+          </div>
 
-              <label for="Direccion" class="form-label">Direccion</label>
-            <input type="text" class="form-control" id="Direccion" style="text-transform: uppercase" placeholder="">
+          <div class="mb-3">
+            <label for="Direccion" class="form-label">Direccion</label>
+            <input type="text" class="form-control" id="PersonaDireccion" style="text-transform: uppercase" placeholder="">
+          </div>
 
-              <label for="Dni" class="form-label">Dni</label>
-            <input type="text" class="form-control" id="Dni" style="text-transform: uppercase" placeholder="">
+          <div class="mb-3">
+            <label for="Telefono" class="form-label">Telefono</label>
+            <input type="text" class="form-control" id="PersonaTelefono" style="text-transform: uppercase" placeholder="">
+          </div>
 
-              <label for="Localidad" class="form-label">Localidad</label>
-            <input type="text" class="form-control" id="Localidad" style="text-transform: uppercase" placeholder="">
-             
-              <label for="Provincia" class="form-label">Provincia</label>
-            <input type="text" class="form-control" id="Provincia" style="text-transform: uppercase" placeholder="">
+          <div class="mb-3">
+            <label for="Dni" class="form-label">Dni</label>
+            <input type="text" class="form-control" id="PersonaDni" style="text-transform: uppercase" placeholder="">
+          </div>
+
+          <div class="mb-3">
+            <label for="LocalidadID" class="form-label">Localidad ID</label>
+            <input type="text" class="form-control" id="LocalidadID" style="text-transform: uppercase" placeholder="">
+          </div>
+
+          <div class="mb-3">
+            <label for="UsuarioID" class="form-label">Usuario ID</label>
+            <input type="text" class="form-control" id="UsuarioID" style="text-transform: uppercase" placeholder="">
+          </div>
         </form>
       </div>
       <div class="modal-footer">
@@ -72,7 +75,7 @@
     </div>
   </div>
 </div>
-</div>
+
 
 
 
@@ -90,7 +93,7 @@
             <th>Telefono</th>
             <th>Dni</th>
             <th>Localidad</th>
-            <th>Provincia</th>
+            <th>Usuario</th>
             <th style="width: 70px"></th>
             <th style="width: 70px"></th>
           </tr>
